Correção: Resolve conflitos de merge e finaliza o projeto (Back e Front)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,18 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.13.0",
+    "axios": "^1.6.8",
+    "body-parser": "^2.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "express-session": "^1.18.2",
-<<<<<<< HEAD
+    "express-session": "^1.18.0",
     "nunjucks": "^3.2.4",
     "nunjucks-date-filter": "^0.1.1"
   },
   "devDependencies": {
     "chokidar": "^3.6.0"
-=======
-    "nunjucks": "^3.2.4"
->>>>>>> 5974d28db4eb4434688c9f11d64dd63b99654077
   }
 }
