--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,21 @@
-<<<<<<< HEAD
 ## Arquivo: docker-compose.yml (VERSÃO FINAL CORRIGIDA)
+version: '3.8'
 
-=======
->>>>>>> 5974d28db4eb4434688c9f11d64dd63b99654077
 services:
   # --- Serviço 1: Banco de Dados (PostgreSQL) ---
   database-svc:
     image: postgres:15-alpine
     container_name: dw3_database
     environment:
-<<<<<<< HEAD
-=======
-      # Define as variáveis de ambiente para o PostgreSQL.
->>>>>>> 5974d28db4eb4434688c9f11d64dd63b99654077
+      # Lê consistentemente do .env
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
     ports:
-<<<<<<< HEAD
+      # Mapeia 5433 local para a porta interna definida no .env
       - "5433:${DB_PORT}" 
     volumes:
       - ./backend/databaseConfig.sql:/docker-entrypoint-initdb.d/init.sql
-=======
-      - "5433:5432"
-    volumes:
-      # Monta o script SQL que criamos para inicializar o banco.
-      # O Docker-Postgres executa automaticamente scripts em /docker-entrypoint-initdb.d
-      - ./backend/databaseConfig.sql:/docker-entrypoint-initdb.d/init.sql
-      # Monta um volume para persistir os dados do banco, mesmo se o contêiner for removido.
->>>>>>> 5974d28db4eb4434688c9f11d64dd63b99654077
       - pg_data:/var/lib/postgresql/data
     networks:
       - dw3-network
@@ -37,11 +24,12 @@ services:
   backend-svc:
     container_name: dw3_backend
     build:
-<<<<<<< HEAD
       context: ./backend
     ports:
+      # Mapeia a porta local para a porta interna definida no .env
       - "${BACKEND_PORT}:${BACKEND_PORT}" 
     environment:
+      # Lê consistentemente do .env
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       DB_HOST: ${DB_HOST} 
@@ -53,24 +41,6 @@ services:
       - database-svc
     volumes:
       - ./backend:/usr/src/app
-=======
-      context: ./backend # Diz ao Docker para construir a imagem usando a pasta ./backend (onde está o Dockerfile)
-    ports:
-      - "40000:40000"
-    environment:
-      DB_USER: admin
-      DB_PASSWORD: admin123
-      DB_HOST: database-svc # IMPORTANTE: O host é o NOME do serviço do banco!
-      DB_NAME: dw3_trabalho
-      DB_PORT: 5432
-      JWT_SECRET: "${JWT_SECRET}"
-    depends_on:
-      - database-svc
-    volumes:
-      # Monta o código-fonte. Qualquer alteração no seu código local reflete no contêiner.
-      - ./backend:/usr/src/app
-      # Ignora o node_modules local, usando apenas o que foi instalado DENTRO do contêiner.
->>>>>>> 5974d28db4eb4434688c9f11d64dd63b99654077
       - /usr/src/app/node_modules
     networks:
       - dw3-network
@@ -79,52 +49,31 @@ services:
   frontend-svc:
     container_name: dw3_frontend
     build:
-<<<<<<< HEAD
       context: ./frontend
     ports:
+      # Mapeia a porta local para a porta interna definida no .env
       - "${FRONTEND_PORT}:${FRONTEND_PORT}" 
     environment:
+      # Lê consistentemente do .env
       API_URL: ${API_URL} 
       PORT: ${FRONTEND_PORT} # Passa a porta para o app.js ler
       SESSION_SECRET: ${SESSION_SECRET} # Passa o segredo da sessão
     depends_on:
       - backend-svc
     volumes:
-=======
-      context: ./frontend # Constrói usando a pasta ./frontend
-    ports:
-      - "40100:40100"
-    environment:
-      API_URL: http://backend-svc:40000 # O front-end chama o back-end pelo nome do serviço! Nunca mais erro isso!
-    depends_on:
-      - backend-svc
-    volumes:
-      # Monta o código-fonte para desenvolvimento em tempo real.
->>>>>>> 5974d28db4eb4434688c9f11d64dd63b99654077
       - ./frontend:/usr/src/app
       - /usr/src/app/node_modules
     networks:
       - dw3-network
-<<<<<<< HEAD
   
   # --- Serviço 4: Adminer (Interface Web para o BD) ---
   adminer-svc:
     image: adminer 
-=======
-
-  # --- Serviço 4: Adminer (Interface Web para o BD) ---
-  adminer-svc:
-    image: adminer
->>>>>>> 5974d28db4eb4434688c9f11d64dd63b99654077
     container_name: dw3_adminer
     ports:
       - "8080:8080"
     depends_on:
-<<<<<<< HEAD
       - database-svc 
-=======
-      - database-svc
->>>>>>> 5974d28db4eb4434688c9f11d64dd63b99654077
     networks:
       - dw3-network
 
@@ -132,9 +81,5 @@ services:
 networks:
   dw3-network:
     driver: bridge
-<<<<<<< HEAD
-=======
-
->>>>>>> 5974d28db4eb4434688c9f11d64dd63b99654077
 volumes:
   pg_data:
